--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,5 @@
 include: package:very_good_analysis/analysis_options.6.0.0.yaml
+analyzer:
+  errors:
+    subtype_of_sealed_class: ignore
+    lines_longer_than_80_chars: ignore
